// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`babel-plugin-enhanced-react-style Dynamic styles should stay in \`style\`: Dynamic styles should stay in \`style\` 1`] = `
"
<div style={{color: a ? \\"red\\" : \\"green\\"}} />

      ↓ ↓ ↓ ↓ ↓ ↓

<div style={{
  color: a ? \\"red\\" : \\"green\\"
}} />;
"
`;

exports[`babel-plugin-enhanced-react-style Extract static from dynamic: Extract static from dynamic 1`] = `
"
<div style={{background: \\"blue\\", color: a ? \\"red\\" : \\"green\\"}} />

      ↓ ↓ ↓ ↓ ↓ ↓

<div css={{
  background: \\"blue\\"
}} style={{
  color: a ? \\"red\\" : \\"green\\"
}} />;
"
`;

exports[`babel-plugin-enhanced-react-style Ignore bound jsx elements: Ignore bound jsx elements 1`] = `
"
const div = () => {}; <div style={{some: \\"other\\", stuff}} />

      ↓ ↓ ↓ ↓ ↓ ↓

const div = () => {};

<div style={{
  some: \\"other\\",
  stuff
}} />;
"
`;

exports[`babel-plugin-enhanced-react-style Ignore non identifier as element name: Ignore non identifier as element name 1`] = `
"
<animated.div style={{some: \\"other\\", stuff}} />

      ↓ ↓ ↓ ↓ ↓ ↓

<animated.div style={{
  some: \\"other\\",
  stuff
}} />;
"
`;

exports[`babel-plugin-enhanced-react-style Only static css: Only static css 1`] = `
"
<div style={{color: \\"green\\"}} />

      ↓ ↓ ↓ ↓ ↓ ↓

<div css={{
  color: \\"green\\"
}} />;
"
`;

exports[`babel-plugin-enhanced-react-style Should bail if \`css\` property exists: Should bail if \`css\` property exists 1`] = `
"
<div css={{}} style={{background: \\"blue\\"}} />

      ↓ ↓ ↓ ↓ ↓ ↓

<div css={{}} style={{
  background: \\"blue\\"
}} />;
"
`;

exports[`babel-plugin-enhanced-react-style Should bail on non object expression: Should bail on non object expression 1`] = `
"
<div style={a} />

      ↓ ↓ ↓ ↓ ↓ ↓

<div style={a} />;
"
`;

exports[`babel-plugin-enhanced-react-style Should work with boolean attributes: Should work with boolean attributes 1`] = `
"
<div allowFullScreen />

      ↓ ↓ ↓ ↓ ↓ ↓

<div allowFullScreen />;
"
`;

exports[`babel-plugin-enhanced-react-style Should work with nested object: Should work with nested object 1`] = `
"
<div style={{color: \\"green\\", \\"&\\": { \\":hover\\": { color: \\"blue\\"}}}} />

      ↓ ↓ ↓ ↓ ↓ ↓

<div css={{
  color: \\"green\\",
  \\"&\\": {
    \\":hover\\": {
      color: \\"blue\\"
    }
  }
}} />;
"
`;
